# Kingdom-Engine

./: .gitignore  CMakeLists.txt  README.md  copy-bin-file.bat  default_env.tres  export_presets.cfg  project.godot
Projects/Game1/: DrawShapes.lua  FlashScreen.lua  Main.lua  Main.scene  Player.node  Scene2.scene  Script.lua  project.cfg  project.kep  run.bat
Projects/Game1/scenes/: Player.scene  Scene2.scene
Projects/Game1/scripts/: FlashScreen.lua  Player.lua  Scene2.lua
components/: Button.tscn  CreateProject.tscn  MiniButton.tscn  NavItem.tscn  OpenProject.tscn  SysButton.tscn  ToolButton.tscn  WarningDialog.tscn
docs/: Project.md
engine/: CMakeLists.txt
engine/Core/: CMakeLists.txt
engine/Core/src/: Game.cpp  Game.h  LuaFunctions.h  LuaScripting.cpp  LuaScripting.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Utils.h  Window.cpp  Window.h  main.cpp
engine/Core/src/Nodes/: Node.cpp  Node.h  Sprite.cpp  Sprite.h
engine/Engine/: Engine.sln  Engine.vcxproj
engine/Engine/Debug/: Engine.exe.recipe  Engine.ilk  Engine.vcxproj.FileListAbsolute.txt  main.obj.import  vc142.idb
engine/Engine/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/Engine/src/: Game.cpp  Game.h  main.cpp
engine/Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  Engine.vcxproj.FileListAbsolute.txt  Game.obj.import  main.obj.import  vc142.idb
engine/Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
engine/LuaScript/src/: Engine.cpp  Engine.h  LuaScripting.cpp  LuaScripting.h
icons/: add-document.svg.import  angulo-esquerdo.svg.import  book-open-cover.svg.import  cross-small.svg.import  cube.svg.import  folder-open.svg.import  menu-burger.svg.import  minus.svg.import  toque.svg.import  window-maximize.svg.import
resources/: corner_style.tres  crimson_bold_font.tres  dialog_style.tres  disable_button.tres  light_bg.tres
scenes/: Editor.tscn  Main.tscn
scenes/pages/: EditorGUI.tscn  Home.tscn
scripts/: EditorGUI.gd  Main.gd  NavItem.gd  RunGame.gd  SystemButtons.gd  TitleBar.gd  Viewport.gd
scripts/Classes/: DialogSystem.gd  Project.gd
scripts/Pages/: Editor.gd  EditorGUI.gd  Home.gd  Viewport.gd
scripts/UI/: Button.gd  CreateProject.gd  NavItem.gd  OpenProject.gd  SystemButtons.gd  ToggleButton.gd  ToolButton.gd  WarningDialog.gd
scripts/singletons/: KEEngine.gd  Main.gd
src/: main.cpp
src/App/: App.cpp  App.h  glad.c  main.cpp
src/Modules/Core/: Game.cpp  Game.h  Project.cpp  Project.h  Scene.h  SceneManager.cpp  SceneManager.h  Utils.h  Window.cpp  Window.h
src/Modules/Core/Nodes/: Node.cpp  Node.h  Sprite.cpp  Sprite.h
src/Modules/Editor/: Editor.cpp  Editor.h
src/Modules/LuaScript/: Engine.cpp  Engine.h  LuaScripting.cpp  LuaScripting.h
tasks/: run_game.py
